<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello Wrold!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="toast_message">Here is more information</string>
    <string name="click_here">Click here</string>
    <string name="gui">Look at my GUI:</string>
    <string name="check_out">Check this out</string>
    <string name="type_here">Type here</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="switch_now">The switch is now&#160;</string>
    <string name="undo">undo</string>
    <string name="enter_email_address">Enter your email address:</string>
    <string name="type_email">Type email here</string>
    <string name="enter_password">Type your password:</string>
    <string name="login">login</string>
    <string name="profile">Your profile</string>
    <string name="name">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="email">Your email:</string>
    <string name="enter_email">Enter your email</string>
    <string name="picture">Your picture</string>
    <string name="click_btn_get_pic">Click the button above to take a picture</string>
    <string name="choice1"></string>
    <string name="choice2"></string>
    <string name="choice3"></string>
    <string name="choice4">DO NOT CLICK ME</string>
    <string name="chatpage">Chat Page</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="gobacktologin">Go back to login</string>
    <string name="open"></string>
    <string name="close"></string>

</resources>