<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:textSize="30sp"
        android:text="@string/gui" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:backgroundTint="#C3C1C1"
        android:text="@string/click_here"
        android:textColor="#040404" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_rowWeight="1"
        android:layout_gravity="fill"
        android:text="@string/check_out" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:background="#FBF9F9"
        app:srcCompat="@drawable/flag"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_columnWeight="1"
        android:text="@string/switch_on_off" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:inputType="textPersonName"
        android:text="@string/type_here"
        android:textColor="#AAA7A7"
        android:textSize="20sp" />

</GridLayout>