<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/gui"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:backgroundTint="#C3C1C1"
        android:text="@string/click_here"
        android:textColor="#040404" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/button2"
        android:text="@string/check_out" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:background="#FBF9F9"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/flag"
        tools:ignore="SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/imageButton"
        android:minHeight="48dp"
        android:text="@string/switch_on_off" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentEnd="true"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:text="@string/type_here"
        android:textColor="#AAA7A7"
        android:textSize="20sp" />

</RelativeLayout>